<resources>
    <string name="app_name">AppListYou</string>
    <string name="listyoy_desc">New \u0026 efficient way to get connected with your personal \u0026 business contacts</string>
    <string name="login_btn_text">Login</string>
    <string name="registration_btn_text">Register</string>
    <string name="action_settings">Settings</string>
    <string name="create_button">Create an account</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_confirm_email">Confirm Email</string>
    <string name="hint_passwor">Password</string>
    <string name="description_first">By creating your account you confirm that you\nhave read and acceptn</string>
    <string name="terms_services">Terms of service</string>
    <string name="register_by_one_of_these_ways">OR REGISTER BY ONE OF THESE WAYS </string>
    <string name="reg_message">An activation link has been sent to your mail please check your mail and verify your account by clicking on that link</string>
    <string name="hint_name_in_other_language">my name in other language</string>
    <string name="hint_first_name_in_another_language">First Name in another language</string>
    <string name="hint_last_name_in_another_language">Last Name in another language</string>
    <string name="text_label_one">List is replacement of Business Card and Unique QR code of your Contact detail. You can put all the information available at your business card.</string>
    <string name="text_label_two">Your Name, Full contact details are not visible to any users within Listyou unless you allow it \u0026 Default setting is Invisible as you complete form.</string>
    <string name="text_label_three">Now you can get connected safely with your business contacts or personal contacts.</string>
    <string name="hint_title">title</string>
    <string name="hint_company_name">company name{example Gap Inc}</string>
    <string name="hint_company_logo">company logo</string>
    <string name="hint_company_email">company email</string>
    <string name="hint_designation">Designation</string>
    <string name="hint_phone_number">Tel</string>
    <string name="hint_fax_number">Fax</string>
    <string name="hint_mobile_number">Mobile</string>
    <string name="hint_code">cc</string>
    <string name="hint_country">Country</string>
    <string name="hint_city">City</string>
    <string name="hint_states">States</string>
    <string name="hint_address">Address</string>
    <string name="hint_website">Website</string>
    <string name="hint_skype">Messenger</string>
    <string name="hint_list_you_id">ListYou ID</string>
    <string name="james">First Name</string>
    <string name="logo_here">Logo \nHere</string>
    <string name="Business_card">Business card</string>
    <string name="add_your_business_card_here">Add your original\nbusiness card here</string>
    <string name="decarpi">Last Name</string>
    <string name="enter_your_name_in_any_language">Enter your name in any other language</string>
    <string name="hint_bussiness_logo">Photo of my current bussiness card</string>
    <string name="save_button">Save and Start using Listyou</string>
    <string name="scan">scan</string>
    <string name="edit_profile_diaplay_text_on_save">Your Profile details have been saved, Now you are ready to use Listyou</string>
    <string name="edit_profile_diaplay_updated_text_on_save">Your Profile details have been updated.</string>
    <string name="message_error">Message</string>
    <string name="already_found">This ListYou Id has already been used.</string>
    <string name="cant_update">ListYou Id is unique for every user so you can\'t change or update it.</string>
    <string name="error_saving_message">Some error occurred during saving your detail to server. Please try again!!!</string>
    <string name="not_found_message">NOT_FOUND</string>
    <string name="siginin">Sign In</string>
    <string name="forgot_password">Forgot Your Password</string>
    <string name="enter_your_mail_address">Enter your email address</string>
    <string name="title_forgot_password">Forgot Password?</string>
    <string name="forgot_desc">Please enter your registered email address here to retrieve the password</string>
    <string name="retreive_button">Retreive</string>
    <string name="show_profile_user_name">James Dicapri</string>
    <string name="user_name_in_another_lang">James Dicapri</string>
    <string name="designation">Bussiness Analyst</string>
    <string name="comapany_name">Company</string>
    <string name="show_profile_user_email">Email</string>
    <string name="show_profile_user_website">Website</string>
    <string name="show_profile_user_Address">Address</string>
    <string name="show_profile_user_city">City</string>
    <string name="show_profile_user_country">Country</string>
    <string name="show_profile_user_mobile">Mobile</string>
    <string name="show_profile_user_telephone">Telephone</string>
    <string name="show_profile_user_fax">Fax</string>
    <string name="show_profile_user_skype">Messanger</string>
    <string name="show_profile_user_colon">:</string>
    <string name="show_bussiness_card_button">Show my business card</string>
    <string name="show_start_butoon">Start</string>
    <string name="lets_start_congratulation">Congratulation!!</string>
    <string name="lets_start_label_one">Your Unique Listyou-QR code profile has been created successfully.</string>
    <string name="lets_start_label_two">Your can add your new contact by sending Listyou-Code or Scan it when you meet in person.</string>
    <string name="lets_start_label_three">Enjoy our services!!</string>
    <string name="lets_start_button_text">Lets Start !</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_my_buss_card">My Bussiness Card</string>
    <string name="drawer_scan_new_list">Scan QR Code</string>
    <string name="drawer_manage_con_list">Manage Contacts</string>
    <string name="drawer_invite_friend">Invite</string>
    <string name="drawer_share_my_contact">Share my profile</string>
    <string name="drawer_manage_group">Manage groups</string>
    <string name="drawer_privacy_settings">Privacy Settings</string>
    <string name="drawer_block_user">Block Users</string>
    <string name="drawer_help_faq">Help Faq</string>
    <string name="drawer_logout">Logout</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="footer_contact_listing">Contact List</string>
    <string name="footer_chat">Chat</string>
    <string name="footer_addlist">AddList</string>
    <string name="footer_notification">Notification</string>
    <string name="scan_qr_header_title">Scan Qr Code</string>
    <string name="add_as_friend_button_text">Add as friend</string>
    <string name="friend_list">ListYou Friend</string>
    <string name="all_contact_list">All Contacts</string>
    <string name="recently_added">Recently Added</string>
    <string name="group">Group</string>
    <string name="Friends">Friends</string>
    <string name="addlist_capture_qr_now">Capture QR\nNow</string>
    <string name="addlist_invite">Invite</string>
    <string name="addlist_search">Search by\nListyou ID</string>
    <string name="addlist_mycard">My bussiness\nCard</string>
    <string name="addlist_search_people">Search People</string>
    <string name="addlist_freind">Add</string>
    <string name="group_header">Create Group</string>
    <string name="group_save">Save and Create Group</string>
    <string name="hint_group_name">Group Name</string>
    <string name="hint_add_member">Add Members</string>
    <string name="hint_group_text_one">* You can add upto 100 users to this group</string>
    <string name="hint_group_text_two">* You can invite friends to join the group and caht with all the group members at once with the group chat feature.</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="personal_detail">Presonal Detail</string>
    <string name="personal_status">Status</string>
    <string name="hint_personal_status">Hello there i am start using ListYou</string>
    <string name="hint_common_group">Common Group</string>
    <string name="manage_user_move_to">Move to</string>
    <string name="manage_user_header">Manage Users</string>
    <string name="invite_friend_by">Invite friend by</string>
    <string name="invite_friend_by_sms">SMS</string>
    <string name="invite_friend_by_email">Email</string>
    <string name="invite_friend_by_share">Share</string>
    <string name="block_popup_chat">Chat</string>
    <string name="block_popup_decline">Decline\nRequest</string>
    <string name="profile_popup">Profile</string>
    <string name="profile_share_contact">Share this\ncontact</string>
    <string name="profile_note">Note</string>
    <string name="profile_user_add_date">Added to my list on 7pm may 20th 2014</string>
    <string name="profile_add_note">Add Note here...</string>
    <string name="self_user_status">Status</string>
    <string name="type_your_status">Type your status</string>
    <string name="self_save_status">Save Status</string>
    <string name="self_user">Me</string>
    <string name="share_my_qr_code">share my\ncontact</string>
    <string name="self_account_setting">Account\nSetting</string>
    <string name="move_user">MOVE</string>
    <string name="move_contact">Move Contact</string>
    <string name="move_user_text_one">Select the user group in which you would like to move this contact and tap MOVE</string>
    <string name="error_title">Error</string>
    <string name="registration_response_error">Error occured during registration. Try again.</string>
    <string name="no_user_found">No user is found with this search id.</string>
    <string name="sms_text">Make new contacts and friends at your work and in your profession. Text me through ListYou!!!</string>
    <string name="privacy_search_by_name">People can search my name</string>
    <string name="privacy_auto_accept_friend_request">Auto Accept Freind Request</string>
    <string name="privacy_qr_code">Show My full detail QR code</string>
    <string name="privacy_show_my_photo">Show my photo on search result</string>
    <string name="privacy_chat">Chat only with user on my List</string>
    <string name="privacy_message_alert">New message Alert</string>
    <string name="privacy_notification_alert">Request Notification Alert</string>
    <string name="fragement_delete_members">Delete Members</string>
    <string name="fragement_delete_user">Delete</string>
    <string name="fragement_delete_user_search_by_name">Search by name</string>
    <string name="fragement_delete_desc">Deleting Anna won’t let you chat with Anna anymore and your previous chat with Ann will be deleted.Are you sure you want to delete Anna from your freind list?</string>
    <string name="fragement_delete_user_yes">Yes</string>
    <string name="fragement_delete_user_no">No</string>
    <string name="fragement_report_settings_header">Settings</string>
    <string name="fragement_report_settings_delete_user">Delete User</string>
    <string name="fragement_report_settings_report_user">Report User</string>
    <string name="fragement_report_settings_manage_group">Manage Group</string>
    <string name="fragement_report_user_header">Report Members</string>
    <string name="fragement_report_settings_submit">Submit</string>
    <string name="fragement_report_reason">Please tell us reason for this report.</string>
    <string name="fragement_report_dialog_header">Report</string>
    <string name="group_prompt">Select Group</string>
</resources>