<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupFragement">

    <RelativeLayout
        android:id="@+id/relative_top"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:background="#c69c6d">

        <TextView
            android:id="@+id/header_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_header"
            android:layout_centerInParent="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#242c3d" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/realtive_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/relative_top">

        <ImageView
            android:layout_marginTop="15dp"
            android:src="@drawable/group_icon"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:scaleType="centerCrop"
            android:id="@+id/group_image_view" />

        <RelativeLayout
            android:layout_alignTop="@+id/group_image_view"
            android:layout_alignBottom="@+id/group_image_view"
            android:layout_toRightOf="@+id/group_image_view"
            android:layout_marginLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:background="@drawable/group_edit_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:hint="@string/hint_group_name"
                android:singleLine="true"
                android:layout_centerInParent="true"
                android:id="@+id/group_edit_box__id" />
        </RelativeLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_member"
            android:gravity="center|left"
            android:background="@drawable/add_member"
            android:layout_below="@+id/group_image_view"
            android:id="@+id/add_member_id" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear_one"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/realtive_group"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:layout_marginTop="5dp"
            android:text="@string/hint_group_text_one"
            android:id="@+id/textView6" />

        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|left"
            android:text="@string/hint_group_text_two"
            android:id="@+id/textView7" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_two"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/realtive_group"
        android:layout_above="@+id/relative_bottom"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="wrap_content">

        <include
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            layout="@layout/create_group_list_header" />

        <ListView
            android:id="@+id/lvExp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:cacheColorHint="#00000000">

        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_bottom"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="#c69c6d">

        <TextView
            android:id="@+id/save_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_save"
            android:layout_centerInParent="true"
            android:textColor="#e81600" />
    </RelativeLayout>
</RelativeLayout>