<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/app_background" >

            <LinearLayout
                android:id="@+id/linear_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/lets_start_congratulation"
                    android:textSize="@dimen/forgotpasswordtextsize"
                    android:textColor="@color/congratulation_color" />

                <TextView
                    android:id="@+id/lets_start_label_one"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="left"
                    android:text="@string/lets_start_label_one"
                    android:textColor="@color/please_enter_your_email" />

                <TextView
                    android:id="@+id/lets_start_label_two"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/lets_start_label_two"
                    android:textColor="@color/please_enter_your_email" />
                
                 <TextView
                    android:id="@+id/lets_start_label_three"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="left"
                    android:text="@string/lets_start_label_three"
                    android:textColor="@color/please_enter_your_email" />

                <Button
                    android:id="@+id/retreive_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/retreive_button"
                    android:text="@string/lets_start_button_text"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible" />
            </LinearLayout>
        </RelativeLayout>

        <ImageView
            android:id="@+id/cross_button_xy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/button_cross" />
        
         <ImageView
            android:id="@+id/cross_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

</RelativeLayout>